--- a/BlackFriday Model.ipynb
+++ b/BlackFriday Model.ipynb
@@ -166,13 +166,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### For training our model we dont need user ID and product ID as these are not features about thhe order. Also these two columns are already defined byb the demographhics such as occupation etc for the user, and product category for the product"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -217,11 +210,223 @@
     "sales.info()\n",
     "sales.Product_ID.nunique()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(550068, 12)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For training our model we dont need user ID and product ID as these are not features about thhe order. Also these two columns are already defined byb the demographhics such as occupation etc for the user, and product category for the product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User_ID</th>\n",
+       "      <th>Product_ID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Occupation</th>\n",
+       "      <th>City_Category</th>\n",
+       "      <th>Stay_In_Current_City_Years</th>\n",
+       "      <th>Marital_Status</th>\n",
+       "      <th>Product_Category_1</th>\n",
+       "      <th>Product_Category_2</th>\n",
+       "      <th>Product_Category_3</th>\n",
+       "      <th>Purchase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000001</td>\n",
+       "      <td>P00069042</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0-17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1000001</td>\n",
+       "      <td>P00248942</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0-17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>15200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000001</td>\n",
+       "      <td>P00087842</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0-17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1000001</td>\n",
+       "      <td>P00085442</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0-17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1000002</td>\n",
+       "      <td>P00285442</td>\n",
+       "      <td>M</td>\n",
+       "      <td>55+</td>\n",
+       "      <td>16</td>\n",
+       "      <td>C</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7969</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   User_ID Product_ID Gender   Age  Occupation City_Category  \\\n",
+       "0  1000001  P00069042      F  0-17          10             A   \n",
+       "1  1000001  P00248942      F  0-17          10             A   \n",
+       "2  1000001  P00087842      F  0-17          10             A   \n",
+       "3  1000001  P00085442      F  0-17          10             A   \n",
+       "4  1000002  P00285442      M   55+          16             C   \n",
+       "\n",
+       "  Stay_In_Current_City_Years  Marital_Status  Product_Category_1  \\\n",
+       "0                          2               0                   3   \n",
+       "1                          2               0                   1   \n",
+       "2                          2               0                  12   \n",
+       "3                          2               0                  12   \n",
+       "4                         4+               0                   8   \n",
+       "\n",
+       "   Product_Category_2  Product_Category_3  Purchase  \n",
+       "0                 NaN                 NaN      8370  \n",
+       "1                 6.0                14.0     15200  \n",
+       "2                 NaN                 NaN      1422  \n",
+       "3                14.0                 NaN      1057  \n",
+       "4                 NaN                 NaN      7969  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import FunctionTransformer, OrdinalEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -239,5 +444,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
